--- a/events.html
+++ b/events.html
@@ -3,13 +3,15 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="events.css" />
     <title>Events</title>
   </head>
   <body>
-    <footer></footer>
+    <header></header>
     <main>
       <h2>Events</h2>
       <p>At Chums, we take pride in hosting a variety of events every month and building a like-minded community of wine lovers. We love to give our customers the opportunity to be a part of something more than just another wine bar. So bring a friend or a loved one, and sign up for one of our upcoming events down below.</p>
     </main>
+    <footer></footer>
   </body>
 </html>
