--- a/events.html
+++ b/events.html
@@ -11,6 +11,27 @@
     <main>
       <h2>Events</h2>
       <p>At Chums, we take pride in hosting a variety of events every month and building a like-minded community of wine lovers. We love to give our customers the opportunity to be a part of something more than just another wine bar. So bring a friend or a loved one, and sign up for one of our upcoming events down below.</p>
+      <img src="./img/winetaste.webp" alt="vin smagning event" />
+      <h3 class="h3_events">Wine tasting</h3>
+      <h4 class="h4_events">December 2025</h4>
+      <p>Guided winetasting of a curated selection of international wines.</p>
+
+      <img src="./img/quiznight.webp" alt="quiz night event" />
+      <h3 class="h3_events">Quiz night</h3>
+      <h4 class="h4_events">December 2025</h4>
+      <p>Join us for a fun quiz-night at our location in the heart of Cph.</p>
+
+      <img src="./img/Jazznight.webp" alt="Jazznight event" />
+      <h3 class="h3_events">Quiz night</h3>
+      <h4 class="h4_events">January 2026</h4>
+      <p>Just us for an intimate live jazz night.</p>
+
+      <h2>Private wine tasting or reception?</h2>
+      <p>Book a meeting, private wine tasting, gathering, or reception with us. Whether you're planning a relaxed get-together or a special celebration, we create the perfect setting with great wine, warm hospitality, and unforgettable flavors.</p>
+      <button>Book a request</button>
+
+      <img src="./img/galleri1.webp" alt="billede af vin" />
+      <img src="./img/galleri2.webp" alt="billede af to glas vin" />
     </main>
     <footer></footer>
   </body>
