menu næsten done

--- a/index.html
+++ b/index.html
@@ -5,12 +5,29 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="index.css">
+    <link rel="stylesheet" href="style.css">
     <title>Forside</title>
 </head>
 
 
 <body>
-    <header></header>
+    <header>
+        <a href="index.html">
+            <img src="img/logo.webp" alt="Logo" class="logo" />
+        </a>
+        <nav>
+            <ul class="menu">
+                <li><a href="menukort.html">Menu</a></li>
+                <li><a href="bord.html">Booking</a></li>
+                <li><a href="events.html">Events</a></li>
+            </ul>
+            <div class="burger">
+                <div class="line"></div>
+                <div class="line"></div>
+                <div class="line"></div>
+            </div>
+        </nav>
+    </header>
 
 
     <main>
@@ -120,6 +137,7 @@
 
 
     <footer></footer>
+    <script src="menu.js"></script>
 </body>
 
 </html>
