forside ikke done 2

--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
             </div>
         </div>
 
-        <div class="grid_1_1 ">
+        <div class="grid_1_1 about_us_container">
             <div class="about_us_section">
                 <h2 class="about_us_h2">About us</h2>
                 <p class="about_us_p">At Chums we specialize in both delicious warm cheese -including Mont D’Or when it
@@ -131,8 +131,49 @@
         </div>
 
         <h2 class="ratings_h2">Ratings</h2>
-
-
+        <div class="rating_scroll">
+            <div class="rating_box">
+                <p>“Simply amazing! The staff was very nice and accommodating! The food was so fresh and delicious! For
+                    our
+                    first night in
+                    Copenhagen they set the bar so high!!”</p>
+            </div>
+            <div class="rating_box">
+                <p>“I really liked this Tapas wine bar and Bistro. The atmosphere and service were great and the food
+                    was
+                    very enjoyable.”</p>
+            </div>
+            <div class="rating_box">
+                <p>Highly recommend. Had a fabulous Chianti with warm cheese, meats, olive and bread. Perfection! Yerges
+                    our
+                    host was
+                    wonderful.</p>
+            </div>
+            <div class="rating_box">
+                <p>“Simply amazing! The staff was very nice and accommodating! The food was so fresh and delicious! For
+                    our
+                    first night in
+                    Copenhagen they set the bar so high!!”</p>
+            </div>
+            <div class="rating_box">
+                <p>“Simply amazing! The staff was very nice and accommodating! The food was so fresh and delicious! For
+                    our
+                    first night in
+                    Copenhagen they set the bar so high!!”</p>
+            </div>
+            <div class="rating_box">
+                <p>“Simply amazing! The staff was very nice and accommodating! The food was so fresh and delicious! For
+                    our
+                    first night in
+                    Copenhagen they set the bar so high!!”</p>
+            </div>
+            <div class="rating_box">
+                <p>“Simply amazing! The staff was very nice and accommodating! The food was so fresh and delicious! For
+                    our
+                    first night in
+                    Copenhagen they set the bar so high!!”</p>
+            </div>
+        </div>
     </main>
 
 
