forside ikke done 3

--- a/index.html
+++ b/index.html
@@ -130,54 +130,86 @@
             </div>
         </div>
 
-        <h2 class="ratings_h2">Ratings</h2>
-        <div class="rating_scroll">
-            <div class="rating_box">
-                <p>“Simply amazing! The staff was very nice and accommodating! The food was so fresh and delicious! For
-                    our
-                    first night in
-                    Copenhagen they set the bar so high!!”</p>
-            </div>
-            <div class="rating_box">
-                <p>“I really liked this Tapas wine bar and Bistro. The atmosphere and service were great and the food
-                    was
-                    very enjoyable.”</p>
-            </div>
-            <div class="rating_box">
-                <p>Highly recommend. Had a fabulous Chianti with warm cheese, meats, olive and bread. Perfection! Yerges
-                    our
-                    host was
-                    wonderful.</p>
-            </div>
-            <div class="rating_box">
-                <p>“Simply amazing! The staff was very nice and accommodating! The food was so fresh and delicious! For
-                    our
-                    first night in
-                    Copenhagen they set the bar so high!!”</p>
-            </div>
-            <div class="rating_box">
-                <p>“Simply amazing! The staff was very nice and accommodating! The food was so fresh and delicious! For
-                    our
-                    first night in
-                    Copenhagen they set the bar so high!!”</p>
-            </div>
-            <div class="rating_box">
-                <p>“Simply amazing! The staff was very nice and accommodating! The food was so fresh and delicious! For
-                    our
-                    first night in
-                    Copenhagen they set the bar so high!!”</p>
-            </div>
-            <div class="rating_box">
-                <p>“Simply amazing! The staff was very nice and accommodating! The food was so fresh and delicious! For
-                    our
-                    first night in
-                    Copenhagen they set the bar so high!!”</p>
+        <div class="ratings_section">
+            <h2 class="ratings_h2">Ratings:</h2>
+            <div class="rating_scroll">
+                <div class="rating_box">
+                    <p>“Simply amazing! The staff was very nice and accommodating! The food was so fresh and delicious!
+                        For
+                        our
+                        first night in
+                        Copenhagen they set the bar so high!!”</p>
+                </div>
+                <div class="rating_box">
+                    <p>“I really liked this Tapas wine bar and Bistro. The atmosphere and service were great and the
+                        food
+                        was
+                        very enjoyable.”</p>
+                </div>
+                <div class="rating_box">
+                    <p>Highly recommend. Had a fabulous Chianti with warm cheese, meats, olive and bread. Perfection!
+                        Yerges
+                        our
+                        host was
+                        wonderful.</p>
+                </div>
+                <div class="rating_box">
+                    <p>“Simply amazing! The staff was very nice and accommodating! The food was so fresh and delicious!
+                        For
+                        our
+                        first night in
+                        Copenhagen they set the bar so high!!”</p>
+                </div>
+                <div class="rating_box">
+                    <p>“Simply amazing! The staff was very nice and accommodating! The food was so fresh and delicious!
+                        For
+                        our
+                        first night in
+                        Copenhagen they set the bar so high!!”</p>
+                </div>
+                <div class="rating_box">
+                    <p>“Simply amazing! The staff was very nice and accommodating! The food was so fresh and delicious!
+                        For
+                        our
+                        first night in
+                        Copenhagen they set the bar so high!!”</p>
+                </div>
+                <div class="rating_box">
+                    <p>“Simply amazing! The staff was very nice and accommodating! The food was so fresh and delicious!
+                        For
+                        our
+                        first night in
+                        Copenhagen they set the bar so high!!”</p>
+                </div>
             </div>
         </div>
     </main>
 
 
-    <footer></footer>
+    <footer>
+        <h2>Join our newsletter</h2>
+        <h3>Stay up to date when our january sale goes live, new events and much more!</h3>
+
+        <form class="sign-up">
+            <input type="email" placeholder="Be a part of our wine loving community" class="search-input" id="email" />
+            <button class="sign-up-button">Sign up</button>
+        </form>
+
+        <div class="footer-nederst">
+            <div class="kontakt">
+                <p>Telephone:<a href="tel:+4526234784"> +45 26 23 47 84</a></p>
+                <p>Email: <a href="mailto:christian@chums.dk">christian@chums.dk</a></p>
+                <p>Instagram:<a href="https://www.instagram.com/chums.winebar/"> @chums.winebar</a></p>
+                <p>Facebook:<a href="https://www.facebook.com/Chums.dk">Chums vinbar og bistro </a></p>
+            </div>
+
+            <div class="rapport">
+                <img src="./img/smileyrapport.webp" alt="smileyrapport billede" />
+                <p>Smiley rapport</p>
+                <p>© 2025 Chums Vinbar & Bistro</p>
+            </div>
+        </div>
+    </footer>
     <script src="menu.js"></script>
 </body>
 
