produkt rettelser done

--- a/produkt.html
+++ b/produkt.html
@@ -29,7 +29,7 @@
     </header>
     <main>
         <div class="grid_1_1_produkt">
-            <div>
+            <div class="produkt_intro">
                 <h1>Wine tasting</h1>
                 <p>Location: Nørre Farimagsgade 82, 1364 København</p>
                 <br>
@@ -79,6 +79,7 @@
             </div>
         </div>
     </footer>
+    <script src="menu.js"></script>
     <script src="produkt.js"></script>
 </body>
 
