forside 4 ikke done

--- a/index.html
+++ b/index.html
@@ -41,22 +41,23 @@
 
         <div class="forside_button_margin">
             <div class="forside_button">
-                <a class="forside_button_tekst" href="http://menukort.html">MENU</a>
+                <a class="forside_button_tekst" href="menukort.html">MENU</a>
             </div>
             <div class="forside_button">
-                <a class="forside_button_tekst" href="http://bord.html">BOOK A TABLE</a>
+                <a class="forside_button_tekst" href="bord.html">BOOK A TABLE</a>
             </div>
             <div class="forside_button">
-                <a class="forside_button_tekst" href="http://events.html">EVENTS</a>
+                <a class="forside_button_tekst" href="events.html">EVENTS</a>
             </div>
         </div>
 
         <div class="location_opening_backcolor grid_1_1">
             <div>
                 <h2 class="location_h2 ">Locations</h2>
-                <p class="location_p ">Nørre Farimagsgade 82, 1364 København</p>
-                <p>Kampergade 5, 3000 Helsingør</p>
-
+                <div class="location_p">
+                    <p>Nørre Farimagsgade 82, 1364 København</p>
+                    <p>Kampergade 5, 3000 Helsingør</p>
+                </div>
 
                 <h2 class="opening_h2">Opening hours</h2>
                 <div class="opening_hours_section_width">
@@ -66,37 +67,37 @@
                         <hr>
                         <p>Closed</p>
                     </div>
-                    <br>
+
                     <div class="day_time_rows">
                         <p>Tuesday</p>
                         <hr>
                         <p>14:00-22:00</p>
                     </div>
-                    <br>
+
                     <div class="day_time_rows">
                         <p>Wednesday</p>
                         <hr>
                         <p>14:00-23:00</p>
                     </div>
-                    <br>
+
                     <div class="day_time_rows">
                         <p>Thursday</p>
                         <hr>
                         <p>14:00-23:00</p>
                     </div>
-                    <br>
+
                     <div class="day_time_rows">
                         <p>Friday</p>
                         <hr>
                         <p>14:00-23:00</p>
                     </div>
-                    <br>
+
                     <div class="day_time_rows">
                         <p>Saturday</p>
                         <hr>
                         <p>14:00-23:00</p>
                     </div>
-                    <br>
+
                     <div class="day_time_rows">
                         <p>Sunday</p>
                         <hr>
