bookbord rettelser done

--- a/bord.html
+++ b/bord.html
@@ -28,7 +28,7 @@
         </nav>
     </header>
     <main>
-        <h1>Book a table</h1>
+        <h1 class="bord_h1">Book a table</h1>
         <div class="grid_1_1_bord">
             <div class="hvid_baggrund_bord">
                 <div class="bord_step">
@@ -38,7 +38,7 @@
                     </div>
                     <div>
                         <p class="step_234">2</p>
-                        <p>Date & Place</p>
+                        <p>Date</p>
                     </div>
                     <div>
                         <p class="step_234">3</p>
@@ -61,8 +61,9 @@
                     <button class="knap_rund">8</button>
 
                 </div>
+                <p class="p_over8">Please call to reserve for groups over eight</p>
             </div>
-            <div>
+            <div class="bookbord_img">
                 <img src="./img/galleri6.webp" alt="winebar">
             </div>
         </div>
