--- a/events.html
+++ b/events.html
@@ -29,7 +29,7 @@
     <main>
       <div class="event-intro">
         <div>
-          <h2>Events</h2>
+          <h1>Events</h1>
           <p>At Chums, we take pride in hosting a variety of events every month and building a like-minded community of wine lovers. We love to give our customers the opportunity to be a part of something more than just another wine bar. So bring a friend or a loved one, and sign up for one of our upcoming events down below.</p>
         </div>
 
@@ -38,7 +38,7 @@
         </div>
       </div>
 
-      <article class="events">
+      <article id="events">
         <div class="event-produkt">
           <img src="./img/winetaste.webp" alt="vin smagning event" />
           <h3 class="h3_events">Wine tasting</h3>
@@ -102,5 +102,6 @@
         </div>
       </div>
     </footer>
+    <script src="events.js" />
   </body>
 </html>
