produkt dynamisk done

--- a/produkt.html
+++ b/produkt.html
@@ -27,8 +27,8 @@
             </div>
         </nav>
     </header>
-    <main>
-        <div class="grid_1_1_produkt">
+    <main id="productContainer">
+        <!-- <div class="grid_1_1_produkt">
             <div class="produkt_intro">
                 <h1>Wine tasting</h1>
                 <p>Location: Nørre Farimagsgade 82, 1364 København</p>
@@ -53,7 +53,7 @@
                 This is a group activity, with a maximum of 10 participants. You'll be tasting a broad selection of 5
                 different wines,
                 including red, white, natural and sweet varieties.</p>
-        </div>
+        </div> -->
     </main>
     <footer>
         <h2>Join our newsletter</h2>
