sidste færdige rettelser på events!

--- a/events.html
+++ b/events.html
@@ -45,7 +45,7 @@
       </div>
 
       <article id="events">
-        <div class="event-produkt">
+        <!-- <div class="event-produkt">
           <img src="./img/winetaste.webp" alt="vin smagning event" />
           <h3 class="h3_events">Wine tasting</h3>
           <h4 class="h4_events">December 2025</h4>
@@ -64,7 +64,7 @@
           <h3 class="h3_events">Jazz night</h3>
           <h4 class="h4_events">January 2026</h4>
           <p class="p_events">Just us for an intimate live jazz night.</p>
-        </div>
+        </div> -->
       </article>
 
       <div class="privat-booking">
